Fix header alignment

--- a/grid/03-grid-layout-3/style.css
+++ b/grid/03-grid-layout-3/style.css
@@ -17,11 +17,24 @@
 
 .header {
   background-color: #393f4d;
+  display: grid;
+  grid-template-columns: 2fr 3fr;
+}
+
+.logo {
+  text-align: left;
+}
+
+.menu ul{
+  display: grid;
+  grid-template-columns: repeat(5, 1fr);
 }
 
 .menu ul,
 .menu li {
   font-size: 16px;
+  list-style: none;
+  text-align: right;
 }
 
 .sidebar {
